# ipap

./: pyproject.toml
chap10/: main.py
chap11/: main.py  pyproject.toml
chap12/: main.py  pyproject.toml
chap13/: firecrackers_game13.1.py  firecrackers_game13.2.py  firecrackers_game13.3.py  mines_games.py  pyproject.toml  tilegame.py
chap2/: bonjour.py  carre.py  echange.py  magasin.py  pyproject.toml  transfert.py
chap3/: pyproject.toml  test1.py  test10.py  test2.py  test3.py  test4.py  test5.py  test6.py  test7.py  test8.py  test9.py
chap4/: categorie.py  dico.py  jour.py  maximum.py  positif_ou_negatif.py  positif_ou_negatif2  produit_positif_ou_negatif.py  produit_positif_ou_negatif2.py  pyproject.toml  voyelles.py
chap5/: assurance.py  avenir1.py  avenir2.py  elections.py  equation_quadratique.py  facturation.py  impot.py  validite_de_date.py
chap6/: Nombres_suivants.py  Nombres_suivants2.py  decalage_de_date.py  entre_10_et_20.py  entre_1_et_3.py  factorielle.py  plus_grand_nombre1.py  plus_grand_nombre2.py  plus_grand_nombre3.py  pyproject.toml  retour_de_monnaie.py  somme.py  syracuse.py  syracuse2.py  table_de_multiplication.py  tierce.py
chap7/: augmentation.py  moyenne_de_classe.py  notes.py  notes2.py  plus_grande_valeur.py  pyproject.toml  schtroumpf_de_tableau.py  somme_diviseur.py  somme_tableau.py  somme_tableaux.py  tableau1.py  tableau_positif_et_negatif.py  voyelles.py
chap8/: dames.py  exo_chap8.py  pyproject.toml  recherche_2D.py  tableau_2D_1.py
chap9/: decroisant_insertion.py  decroissant_bulle.py  decroissant_selectif.py  (+8 more)
(+2 files in other folders)
